# diarize-log

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs  plan-overview.md  pyproject.toml
assets/samples/: 239-16-JMB009-JM033.md
docs/: domain-words.md
docs/backlog/: doctor-fix-preparation-20260427.md  transcription-pipeline-direction-20260422.md
docs/evaluation/pyannote-stt-20260421T150358_264+0900/: README.md  normalized_comparison.md  normalized_texts.json  pyannote_stt_absolute_segments.jsonl  report.md
docs/evaluation/separated-20260421T150358_264+0900/: README.md  report.md  separated_absolute_segments.jsonl
docs/survey/: deepgram-vs-openai-20260422.md
docs/survey/deepgram-vs-openai-20260422/: report.md
docs/survey/pyannote-oss-20260422/: comparison.json  report.md
scripts/: compare_normalized_transcripts.py  evaluate_pyannote_stt_existing_wavs.py  evaluate_separated_existing_wavs.py  speaker_embedder.py
src/: cli.rs  config.rs  lib.rs  logger.rs  main.rs  storage.rs
src/adapters/: audio_clipper.rs  logging.rs  mod.rs  recorder.rs  separated_transcriber.rs  simple_transcriber.rs  speaker_embedder.rs  storage.rs  transcriber.rs
src/application/: capture.rs  mod.rs  speaker.rs
src/bootstrap/: commands.rs  mod.rs  signal.rs
src/config/: load.rs  mod.rs  resolve.rs
src/domain/: audio.rs  capture.rs  merge.rs  mod.rs  source.rs  speech.rs
src/ports/: audio_clipper.rs  capture_store.rs  mod.rs  recorder.rs  speaker_store.rs  transcriber.rs
tests/: architecture_layer_dependencies.rs  architecture_ports_dependency.rs
(+117 files in other folders)
