[package]
name = "diarize-log"
version = "0.1.0"
edition = "2024"

[dependencies]
cpal = "0.16.0"
dotenvy = "0.15.7"
hound = "3.5.1"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
time = { version = "0.3.44", features = ["formatting", "local-offset", "macros"] }

[dev-dependencies]
tempfile = "3.23.0"
